Add Game logic; Add APIs; Add tests; Add swagger
