# api/restapi/operations/get_level_level_id_responses.go
@@ -1,0 +1,190 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package operations
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"net/http"
+
+	"github.com/go-openapi/runtime"
+
+	"github.com/pedrocmart/maze-go/api/models"
+)
+
+// GetLevelLevelIDOKCode is the HTTP code returned for type GetLevelLevelIDOK
+const GetLevelLevelIDOKCode int = 200
+
+/*GetLevelLevelIDOK 200
+
+swagger:response getLevelLevelIdOK
+*/
+type GetLevelLevelIDOK struct {
+
+	/*
+	  In: Body
+	*/
+	Payload *models.Level `json:"body,omitempty"`
+}
+
+// NewGetLevelLevelIDOK creates GetLevelLevelIDOK with default headers values
+func NewGetLevelLevelIDOK() *GetLevelLevelIDOK {
+
+	return &GetLevelLevelIDOK{}
+}
+
+// WithPayload adds the payload to the get level level Id o k response
+func (o *GetLevelLevelIDOK) WithPayload(payload *models.Level) *GetLevelLevelIDOK {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the get level level Id o k response
+func (o *GetLevelLevelIDOK) SetPayload(payload *models.Level) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *GetLevelLevelIDOK) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(200)
+	if o.Payload != nil {
+		payload := o.Payload
+		if err := producer.Produce(rw, payload); err != nil {
+			panic(err) // let the recovery middleware deal with this
+		}
+	}
+}
+
+// GetLevelLevelIDBadRequestCode is the HTTP code returned for type GetLevelLevelIDBadRequest
+const GetLevelLevelIDBadRequestCode int = 400
+
+/*GetLevelLevelIDBadRequest 400
+
+swagger:response getLevelLevelIdBadRequest
+*/
+type GetLevelLevelIDBadRequest struct {
+
+	/*
+	  In: Body
+	*/
+	Payload *models.BaseResponse `json:"body,omitempty"`
+}
+
+// NewGetLevelLevelIDBadRequest creates GetLevelLevelIDBadRequest with default headers values
+func NewGetLevelLevelIDBadRequest() *GetLevelLevelIDBadRequest {
+
+	return &GetLevelLevelIDBadRequest{}
+}
+
+// WithPayload adds the payload to the get level level Id bad request response
+func (o *GetLevelLevelIDBadRequest) WithPayload(payload *models.BaseResponse) *GetLevelLevelIDBadRequest {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the get level level Id bad request response
+func (o *GetLevelLevelIDBadRequest) SetPayload(payload *models.BaseResponse) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *GetLevelLevelIDBadRequest) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(400)
+	if o.Payload != nil {
+		payload := o.Payload
+		if err := producer.Produce(rw, payload); err != nil {
+			panic(err) // let the recovery middleware deal with this
+		}
+	}
+}
+
+// GetLevelLevelIDNotFoundCode is the HTTP code returned for type GetLevelLevelIDNotFound
+const GetLevelLevelIDNotFoundCode int = 404
+
+/*GetLevelLevelIDNotFound 404
+
+swagger:response getLevelLevelIdNotFound
+*/
+type GetLevelLevelIDNotFound struct {
+
+	/*
+	  In: Body
+	*/
+	Payload *models.BaseResponse `json:"body,omitempty"`
+}
+
+// NewGetLevelLevelIDNotFound creates GetLevelLevelIDNotFound with default headers values
+func NewGetLevelLevelIDNotFound() *GetLevelLevelIDNotFound {
+
+	return &GetLevelLevelIDNotFound{}
+}
+
+// WithPayload adds the payload to the get level level Id not found response
+func (o *GetLevelLevelIDNotFound) WithPayload(payload *models.BaseResponse) *GetLevelLevelIDNotFound {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the get level level Id not found response
+func (o *GetLevelLevelIDNotFound) SetPayload(payload *models.BaseResponse) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *GetLevelLevelIDNotFound) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(404)
+	if o.Payload != nil {
+		payload := o.Payload
+		if err := producer.Produce(rw, payload); err != nil {
+			panic(err) // let the recovery middleware deal with this
+		}
+	}
+}
+
+// GetLevelLevelIDInternalServerErrorCode is the HTTP code returned for type GetLevelLevelIDInternalServerError
+const GetLevelLevelIDInternalServerErrorCode int = 500
+
+/*GetLevelLevelIDInternalServerError 500
+
+swagger:response getLevelLevelIdInternalServerError
+*/
+type GetLevelLevelIDInternalServerError struct {
+
+	/*
+	  In: Body
+	*/
+	Payload *models.BaseResponse `json:"body,omitempty"`
+}
+
+// NewGetLevelLevelIDInternalServerError creates GetLevelLevelIDInternalServerError with default headers values
+func NewGetLevelLevelIDInternalServerError() *GetLevelLevelIDInternalServerError {
+
+	return &GetLevelLevelIDInternalServerError{}
+}
+
+// WithPayload adds the payload to the get level level Id internal server error response
+func (o *GetLevelLevelIDInternalServerError) WithPayload(payload *models.BaseResponse) *GetLevelLevelIDInternalServerError {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the get level level Id internal server error response
+func (o *GetLevelLevelIDInternalServerError) SetPayload(payload *models.BaseResponse) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *GetLevelLevelIDInternalServerError) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(500)
+	if o.Payload != nil {
+		payload := o.Payload
+		if err := producer.Produce(rw, payload); err != nil {
+			panic(err) // let the recovery middleware deal with this
+		}
+	}
+}
